syntax = "proto3";

package domain.order.common.v1;

option go_package = "github.com/shortlink-org/shop/oms/internal/domain/order/v1/common";

import "google/protobuf/timestamp.proto";

// OrderStatus represents the status of an order
enum OrderStatus {
  // Unspecified
  ORDER_STATUS_UNSPECIFIED = 0;
  // Order has been placed but not yet processed
  ORDER_STATUS_PENDING = 1;
  // Order is currently being processed
  ORDER_STATUS_PROCESSING = 2;
  // Order has been completed
  ORDER_STATUS_COMPLETED = 3;
  // Order has been cancelled
  ORDER_STATUS_CANCELLED = 4;
}

// OrderTransitionEvent represents the FSM action (event) that triggers an order state transition.
// State = status (PENDING, PROCESSING, ...), Event = action (CREATE, CANCEL, COMPLETE).
enum OrderTransitionEvent {
  ORDER_TRANSITION_EVENT_UNSPECIFIED = 0;
  // Create order (PENDING -> PROCESSING)
  ORDER_TRANSITION_EVENT_CREATE = 1;
  // Cancel order (PENDING/PROCESSING -> CANCELLED)
  ORDER_TRANSITION_EVENT_CANCEL = 2;
  // Complete order (PROCESSING -> COMPLETED)
  ORDER_TRANSITION_EVENT_COMPLETE = 3;
}

// DeliveryPriority levels for packages
enum DeliveryPriority {
  // Unspecified priority
  DELIVERY_PRIORITY_UNSPECIFIED = 0;
  // Normal priority delivery
  DELIVERY_PRIORITY_NORMAL = 1;
  // Urgent priority delivery
  DELIVERY_PRIORITY_URGENT = 2;
}

// DeliveryStatus represents delivery status
enum DeliveryStatus {
  // Unspecified status
  DELIVERY_STATUS_UNSPECIFIED = 0;
  // Package accepted by delivery service
  DELIVERY_STATUS_ACCEPTED = 1;
  // Package assigned to courier
  DELIVERY_STATUS_ASSIGNED = 2;
  // Package in transit
  DELIVERY_STATUS_IN_TRANSIT = 3;
  // Package delivered successfully
  DELIVERY_STATUS_DELIVERED = 4;
  // Package not delivered
  DELIVERY_STATUS_NOT_DELIVERED = 5;
}

// NotDeliveredReason represents reason for not delivered
enum NotDeliveredReason {
  // Unspecified reason
  NOT_DELIVERED_REASON_UNSPECIFIED = 0;
  // Customer not available at delivery address
  NOT_DELIVERED_REASON_CUSTOMER_NOT_AVAILABLE = 1;
  // Wrong address provided
  NOT_DELIVERED_REASON_WRONG_ADDRESS = 2;
  // Customer refused the delivery
  NOT_DELIVERED_REASON_CUSTOMER_REFUSED = 3;
  // Access denied to delivery address
  NOT_DELIVERED_REASON_ACCESS_DENIED = 4;
  // Package damaged during delivery
  NOT_DELIVERED_REASON_PACKAGE_DAMAGED = 5;
  // Other reason (requires description)
  NOT_DELIVERED_REASON_OTHER = 6;
}

// NotDeliveredDetails contains reason and optional description (required if reason == OTHER)
message NotDeliveredDetails {
  NotDeliveredReason reason = 1;
  string description = 2; // required if reason == OTHER
}

// OrderItem represents an order item
message OrderItem {
  // Good ID
  string good_id = 1;
  // Quantity
  int32 quantity = 2;
  // Price per item (Decimal as string to preserve precision)
  string price = 3;
}

// DeliveryAddress represents a physical address with coordinates
message DeliveryAddress {
  // street is the street address
  string street = 1;
  // city is the city name
  string city = 2;
  // postal_code is the postal/zip code
  string postal_code = 3;
  // country is the country name
  string country = 4;
  // latitude is the latitude coordinate
  double latitude = 5;
  // longitude is the longitude coordinate
  double longitude = 6;
}

// DeliveryPeriod represents the desired delivery time window
message DeliveryPeriod {
  // start_time is the start of desired delivery period
  google.protobuf.Timestamp start_time = 1;
  // end_time is the end of desired delivery period
  google.protobuf.Timestamp end_time = 2;
}

// PackageInfo contains package physical characteristics
message PackageInfo {
  // weight_kg is the weight of the package in kilograms
  double weight_kg = 1;
}

// DeliveryLocation represents a GPS location
message DeliveryLocation {
  // latitude is the latitude coordinate
  double latitude = 1;
  // longitude is the longitude coordinate
  double longitude = 2;
  // accuracy is the accuracy in meters
  double accuracy = 3;
  // timestamp is when the location was recorded
  google.protobuf.Timestamp timestamp = 4;
}

// RecipientContacts contains contact details for the delivery recipient
message RecipientContacts {
  // recipient_name is the name of the person receiving the delivery
  string recipient_name = 1;
  // recipient_phone is the phone number for delivery contact
  string recipient_phone = 2;
  // recipient_email is the email for delivery notifications
  string recipient_email = 3;
}

// DeliveryInfo represents delivery information
message DeliveryInfo {
  // Pickup address
  DeliveryAddress pickup_address = 1;
  // Delivery address
  DeliveryAddress delivery_address = 2;
  // Delivery period
  DeliveryPeriod delivery_period = 3;
  // Package info
  PackageInfo package_info = 4;
  // Priority
  DeliveryPriority priority = 5;
  // Recipient contacts (optional)
  RecipientContacts recipient_contacts = 6;
}
